--- a/package.json
+++ b/package.json
@@ -1,57 +1,80 @@
 {
-  "name": "expensify",
+  "name": "Budget_App_03",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "my name",
   "license": "MIT",
   "scripts": {
-    "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server",
+    "server": "live-server public",
+    "build_webpack": "webpack --watch",
+    "build:prod": "webpack -p --env=production",
+    "build:dev": "cross-env NODE_ENV=production  webpack --env=development",
+    "WATCH_dev-server": "webpack-dev-server  --env=development --watch",
+    "dev-server": "cross-env NODE_ENV=development  webpack-dev-server  --env=development --hot --inline",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
-    "start": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod"
+    "start": "node A02_sec013_135_server/server_135.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "css-loader": "0.28.4",
-    "express": "4.15.4",
-    "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "4.2.0",
-    "history": "4.7.2",
-    "moment": "2.18.1",
-    "node-sass": "4.5.3",
-    "normalize.css": "7.0.0",
-    "numeral": "2.0.6",
-    "react": "15.6.1",
-    "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "12.3.0",
-    "react-dom": "15.6.1",
-    "react-modal": "2.2.2",
-    "react-redux": "5.0.5",
-    "react-router-dom": "4.1.2",
-    "redux": "3.7.2",
-    "redux-mock-store": "1.2.3",
-    "redux-thunk": "2.2.0",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "uuid": "3.1.0",
-    "validator": "8.0.0",
-    "webpack": "3.1.0"
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.4",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "dotenv": "^6.1.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "express": "^4.16.4",
+    "firebase": "^5.5.5",
+    "history": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
+    "live-server": "^1.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "moment": "^2.22.2",
+    "node-sass": "^4.9.4",
+    "normalize.css": "^8.0.0",
+    "numeral": "^2.0.6",
+    "postcss-loader": "^3.0.0",
+    "raf": "^3.4.0",
+    "react": "^16.6.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^17.1.1",
+    "react-dom": "^16.6.0",
+    "react-loadable": "^5.5.0",
+    "react-modal": "^3.5.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.6.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "uuid": "^3.3.2",
+    "validator": "^10.4.0",
+    "webpack": "^4.23.1",
+    "webpack-md5-hash": "0.0.6"
   },
   "devDependencies": {
-    "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
-    "enzyme": "2.9.1",
-    "enzyme-to-json": "1.5.1",
-    "jest": "20.0.4",
-    "react-test-renderer": "15.6.1",
-    "webpack-dev-server": "2.5.1"
+    "@babel/node": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jest": "^23.4.2",
+    "redux-mock-store": "^1.5.3",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10"
   }
 }
